--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,4 +2,5 @@
 # https://rustwasm.github.io/docs/wasm-bindgen/web-sys/unstable-apis.html
 # check status at https://developer.mozilla.org/en-US/docs/Web/API/Clipboard#browser_compatibility
 [build]
+target = "wasm32-unknown-unknown"
 rustflags = ["--cfg=web_sys_unstable_apis"]
